# new

./: package-lock.json  package.json  vite.config.js  Без имени-1.psd
.github/workflows/: build.yml
.github/workflows/.github/workflows/: build.yml
email-tracker/: email-tracker  package-lock.json  package.json  render.yaml  server.cjs
pixel-tracker/: Cargo.toml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: emailsender.rs  lib.rs  load_auth.rs  main.rs  save_auth.rs
src/utils/: mailer.js
